// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`栅格系统 响应式 1`] = `
<ContextProvider
  value={
    Object {
      "gutter": 0,
    }
  }
>
  <div
    className="xl-row"
  >
    <Col
      span={
        Object {
          "lg": 6,
          "md": 4,
        }
      }
    >
      Col1
    </Col>
    <Col
      span={
        Object {
          "lg": 6,
          "md": 5,
        }
      }
    >
      Col2
    </Col>
    <Col
      span={
        Object {
          "lg": 6,
          "md": 7,
        }
      }
    >
      Col3
    </Col>
    <Col
      span={
        Object {
          "lg": 6,
          "md": 8,
        }
      }
    >
      Col4
    </Col>
  </div>
</ContextProvider>
`;

exports[`栅格系统 基本用法 1`] = `
<ContextProvider
  value={
    Object {
      "gutter": 0,
    }
  }
>
  <div
    className="xl-row"
  >
    <Col
      span={4}
    >
      Col1
    </Col>
    <Col
      span={5}
    >
      Col2
    </Col>
    <Col
      span={7}
    >
      Col3
    </Col>
    <Col
      span={8}
    >
      Col4
    </Col>
  </div>
</ContextProvider>
`;
